instructions.Instructions.scala.error
Compilation error:
Instructions:12: error: not found: value get1
get1():Int
^Instructions:13: error: not found: value get1
get1():Int
^